--- a/Conferencia/Services/Servers/Admin_Service/dockerfile
+++ b/Conferencia/Services/Servers/Admin_Service/dockerfile
@@ -1,12 +1,20 @@
-FROM node:14
+FROM node:14-slim
 
-RUN mkdir -p /opt/oracle
-RUN cd /opt/oracle
-RUN wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-basic-linuxx64.zip
-RUN unzip instantclient-basic-linuxx64.zip
-RUN sh -c "echo /opt/oracle/instantclient_21_3 > /etc/ld.so.conf.d/oracle-instantclient.conf"
-RUN ldconfig
-RUN export LD_LIBRARY_PATH=/opt/oracle/instantclient_21_3:$LD_LIBRARY_PATH
+RUN apt-get update && apt-get install -y libaio1 wget
+RUN apt-get install -y unzip
+
+WORKDIR /opt/oracle
+
+RUN wget \
+    https://download.oracle.com/otn_software/linux/instantclient/193000/instantclient-basic-linux.x64-19.3.0.0.0dbru.zip && \
+    unzip instantclient-basic-linux.x64-19.3.0.0.0dbru.zip && \
+    rm -f instantclient-basic-linux.x64-19.3.0.0.0dbru.zip
+
+RUN cd /opt/oracle/instantclient_19_3 && rm -f *jdbc* *occi* *mysql* *README* *jar \
+    uidrvci genezi adrci
+
+RUN echo /opt/oracle/instantclient_19_3 > /etc/ld.so.conf.d/oracle-instantclient.conf && \
+    ldconfig
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
@@ -19,4 +27,4 @@ RUN npm install
 COPY . .
 
 EXPOSE 5000
-CMD ["npm", "run", "forever"]
+CMD ["npm", "start"]
